# vulcan-rs

./: .gitignore  Cargo.toml  README.md
enclaves/attestation-server/: Cargo.toml  Makefile
enclaves/attestation-server/app/: app.c  lib.c  sgx_support.h
enclaves/attestation-server/app/include/linux/can/: bcm.h  error.h  isotp.h  netlink.h
enclaves/attestation-server/enclave/: Cargo.toml  Enclave.edl  Enclave_private.pem
enclaves/attestation-server/enclave/src/: lib.rs
enclaves/attestation-server/src/: lib.rs
enclaves/logging/: Makefile
enclaves/logging/app/: app.c  app.h  lib.h
enclaves/logging/app/include/: can.h
enclaves/logging/app/include/linux/can/: gw.h  raw.h
enclaves/logging/enclave/: Cargo.toml  Enclave.edl  Makefile
enclaves/logging/enclave/src/: lib.rs
src/: leia.rs
vulcan/: Cargo.toml
vulcan/src/: leia.rs  lib.rs  vulcan.rs
