
[package]
name = "Attestation server enclave"
version = "0.1.0"
authors = ["Sten Verbois <stenverbois@gmail.com>"]

[lib]
name = "attestation_server"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
vulcan = { version = "0.1", path = "../../vulcan-rs" }

sgx_tstd = { path = "../../../rust-sgx-sdk/sgx_tstd" }
sgx_rand = { path = "../../../rust-sgx-sdk/sgx_rand" }
sgx_rand_derive = { path = "../../../rust-sgx-sdk/sgx_rand_derive" }
